<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.example.kylinarm.searchviewdemo.View.UrlImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="23dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:id="@+id/header_build"
            app:riv_oval="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="68dp"
            android:text="@string/item_now_default_title"
            android:textSize="17sp"
            android:textColor="#1f2326"
            android:maxEms="8"
            android:ellipsize="end"
            android:singleLine="true"
            android:id="@+id/title"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/title"
            android:layout_marginTop="21dp"
            android:layout_marginStart="6dp"
            android:background="#f3f8fa"
            android:id="@+id/layout_housetype">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_now_default_housetype"
                android:textColor="#7caee8"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/housetype"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_toRightOf="@+id/layout_housetype"
            android:layout_marginLeft="5dp"
            android:background="#f3faf3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_now_default_status"
                android:textColor="#6fc27f"
                android:textSize="12sp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/status"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_now_default_price"
            android:textSize="17sp"
            android:textColor="#fa4600"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="45dp"
            android:id="@+id/price"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_now_default_region"
            android:textSize="13sp"
            android:textColor="#676c73"
            android:layout_marginLeft="178dp"
            android:layout_marginTop="47dp"
            android:id="@+id/location"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_now_default_details"
        android:textSize="17sp"
        android:textColor="#1f2326"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/details"
        />
    <ImageView
        android:id="@+id/Thumbnail"
        android:layout_width="324dp"
        android:layout_height="175dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_back1"
        />
    <RelativeLayout
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#f8f8f8"
        android:layout_marginBottom="20dp">
        <com.example.kylinarm.searchviewdemo.View.UrlImageView
            android:layout_width="19.8dp"
            android:layout_height="19.8dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/shape_back1"
            app:riv_oval="true"
            android:id="@+id/header_person"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_now_default_personname"
            android:textSize="13sp"
            android:textColor="#1f2326"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="12dp"
            android:id="@+id/personname"
            />
        <ImageView
            android:layout_width="8.2dp"
            android:layout_height="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="79dp"
            android:src="@drawable/honor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="97dp"
            android:layout_marginTop="12dp"
            android:text="@string/item_now_default_action"
            android:textColor="#676c73"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="253dp"
            android:src="@drawable/phone"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="295dp"
            android:src="@drawable/message_now"/>
    </RelativeLayout>
</LinearLayout>