<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/shape_store"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:background="@drawable/shapeback_store"
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="131dp">

    </RelativeLayout>
    <TextView
        android:layout_width="108dp"
        android:layout_height="24dp"
        android:text="@string/item_shape_store_default_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <RelativeLayout
        android:layout_width="110dp"
        android:layout_height="131dp"
        android:background="#ffffff"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="43dp"
        android:id="@+id/starter">
        <RelativeLayout
            android:layout_width="106dp"
            android:layout_height="127dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape_back1">


            <RelativeLayout
                android:layout_width="106dp"
                android:layout_height="127dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/shape_color">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="22dp"
                    android:text="@string/item_shape_store_default_special1"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="81dp"
                    android:textSize="16sp"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/item_shape_store_default_special2"
                    android:layout_marginTop="105dp"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="110dp"
        android:layout_height="131dp"
        android:background="#ffffff"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="43dp"
        android:id="@+id/middle">
        <RelativeLayout
            android:layout_width="106dp"
            android:layout_height="127dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape_back2">


            <RelativeLayout
                android:layout_width="106dp"
                android:layout_height="127dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/shape_color">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="22dp"
                    android:text="@string/item_shape_store_default_special3"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="81dp"
                    android:textSize="16sp"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/item_shape_store_default_special4"
                    android:layout_marginTop="105dp"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="110dp"
        android:layout_height="131dp"
        android:background="#ffffff"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="43dp"
        android:id="@+id/ender">
        <RelativeLayout
            android:layout_width="106dp"
            android:layout_height="127dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape_back3">


            <RelativeLayout
                android:layout_width="106dp"
                android:layout_height="127dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/shape_color">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="22dp"
                    android:text="@string/item_shape_store_default_special5"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="81dp"
                    android:textSize="16sp"
                    android:textColor="#ffffff"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/item_shape_store_default_special6"
                    android:layout_marginTop="105dp"
                    android:textAlignment="center"
                    android:textSize="10sp"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="175dp"
        android:id="@+id/image_end1"
        android:background="@drawable/endcolor_store"/>
    <ImageView
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="175dp"
        android:id="@+id/image_end2"
        android:background="@drawable/endcolor_store"/>
    <ImageView
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginLeft="244dp"
        android:layout_marginTop="175dp"
        android:id="@+id/image_end3"
        android:background="@drawable/endcolor_store"/>
</RelativeLayout>